--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "can-npm-publish": "^1.3.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
@@ -21,8 +22,8 @@
     "lib": "yarn workspace weed365",
     "typecheck": "tsc --noEmit",
     "lint:fix": "eslint --fix '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
-    "lint": "eslint '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
+    "lint:ci": "eslint '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
     "format:fix": "prettier --write '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
-    "format": "prettier --check '**/src/**/*.{ts,tsx,js,jsx,json,md}'"
+    "format:ci": "prettier --check '**/src/**/*.{ts,tsx,js,jsx,json,md}'"
   }
 }
