--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vite": "^2.5.7"
   },
   "scripts": {
     "example": "yarn workspace example",
-    "lib": "yarn workspace weed365",
+    "lib": "yarn workspace supercolorpixelisticxdridocious",
     "typecheck": "tsc --noEmit",
     "lint:fix": "eslint --fix '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
     "lint:ci": "eslint '**/src/**/*.{ts,tsx,js,jsx,json,md}'",
