--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.7"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "example": "yarn workspace example",
