--- a/.github/workflows/stg.yaml
+++ b/.github/workflows/stg.yaml
@@ -18,9 +18,9 @@ jobs:
       - name: typecheck
         run: yarn run typecheck
       - name: lint
-        run: yarn run lint
+        run: yarn run lint:fix
       - name: format
-        run: yarn run format
+        run: yarn run format:fix
       - name: build
         run: yarn run lib run build:prd
       - name: App Deploy
