--- a/.github/workflows/prd.yaml
+++ b/.github/workflows/prd.yaml
@@ -20,9 +20,9 @@ jobs:
       - name: typecheck
         run: yarn run typecheck
       - name: lint
-        run: yarn run lint
+        run: yarn run lint:ci
       - name: format
-        run: yarn run format
+        run: yarn run format:ci
       - name: build
         run: yarn run lib run build:prd
       - name: can i publish
