--- a/packages/web-component/package.json
+++ b/packages/web-component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supercolorpixelisticxdridocious",
-  "version": "1.0.0",
+  "version": "0.0.4",
   "main": "index.js",
   "repository": "https://github.com/sadnessOjisan/SupercolorpixelisticXDRidocious.git",
   "author": "sadness_ojisan <sadness.ojisan@gmail.com>",
@@ -11,5 +11,6 @@
   },
   "devDependencies": {
     "vite": "^2.5.7"
-  }
+  },
+  "files": ["dist"]
 }
