--- a/packages/web-component/package.json
+++ b/packages/web-component/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supercolorpixelisticxdridocious",
-  "version": "0.0.4",
-  "main": "index.js",
+  "version": "0.0.5",
+  "main": "dist/build.js",
   "repository": "https://github.com/sadnessOjisan/SupercolorpixelisticXDRidocious.git",
   "author": "sadness_ojisan <sadness.ojisan@gmail.com>",
   "license": "MIT",
@@ -12,5 +12,7 @@
   "devDependencies": {
     "vite": "^2.5.7"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
